--- a/credentials.html
+++ b/credentials.html
@@ -204,7 +204,7 @@
       </section>
 
       <section class="diploma-card">
-        <img src="diploma.JPG" alt="Diploma for Benjamin Novik from Stony Brook University" class="diploma-img">
+        <img src="diploma.jpg" alt="Diploma for Benjamin Novik from Stony Brook University" class="diploma-img">
         <a href="index.html" class="btn-primary">← Back to main site</a>
       </section>
     </main>
