--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <a href="#services">What I Tutor</a>
         <a href="#pricing">Pricing</a>
         <a href="#contact">Contact</a>
-        <a href="book.html">Book a Session</a>
+        <a href="booking.html">Book a Session</a>
         <a href="credentials.html">Credentials</a>
       </nav>
     </div>
