--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
             </p>
 
             <div class="hero-cta-row">
-              <a class="btn-primary" href="book.html">
+              <a class="btn-primary" href="booking.html">
                 Book a first session
               </a>
               <a class="btn-secondary" href="mailto:novik.ben@gmail.com">
@@ -588,7 +588,7 @@
           I usually respond within 24 hours.
         </p>
         <div class="hero-cta-row" style="margin-top: 0.9rem;">
-          <a class="btn-primary" href="book.html">Book a first session</a>
+          <a class="btn-primary" href="booking.html">Book a first session</a>
           <a class="btn-secondary" href="mailto:novik.ben@gmail.com">Email me directly</a>
         </div>
       </div>
